# eptic

./: .gitignore  README.md  config_noskeptic.json  pyproject.toml
config/: main.yaml
docs/: Subset.docx  correspondences.xlsx  ~$Subset.docx
notebooks/: data_exploration.ipynb  data_exploration_old.ipynb  event_dataframe.csv  temp_dataframe.csv
src/: README.md  Report.docx  create_graphs.py  db_connect.py  process.py
src/noske/: README.md  db_connect.py  extract_clean_texts_noske.py  extract_clean_texts_skeptic.py  extract_data_with_only_s_video_tags_noske.py  extract_duplicate_texts.py  extract_texts_with_tags_noske.py  extract_videos.py  final_corpus_processing.py  get_duplicate_texts.py  lev_distance_noske.py  lev_distance_skeptic.py  load_missing_videos.py  match_event_ids.py  merge_noske_skeptic.py  rename_columns_noske.py  test_loaded_table.py
src/other_datasets/: europarl_asr.py
src/skeptic/: load_noskeptic_data.py
src/video_extraction/: README.md  convert_urls.py  extract_recording_start.py  extract_timestamps.py  extract_video.py  extract_video_v2_prog.py  extract_videos_137_222.py  extract_videos_maybe_final.py
src/video_to_text2/: extract_audio_streams_137_222.py
src/whisper_scripts/: audio_duration_calc.py  copy_english_subset_audios.py  create_metadata_file.py  cut_all_videos_noske.py  cut_all_videos_noske_2.py  cut_all_videos_noske_sl.py  cut_videos_whisper_noske.py  delete_sl.py  extract_audio_from_noske_server.py  extract_sentence_event_id_noske.py  extract_sentences_noske.py  find_corresponding_audio.py  metadata.csv  move_files_into_drive.py  move_files_train_test_for_hf.py  (+5 more)
tests/: test_db_connect.py
(+18 files in other folders)
