[tool.poetry]
name = "eptic"
version = "0.1.0"
description = ""
authors = ["ffedox <test@test.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
seaborn = "^0.13.0"
hydra-core = "^1.3.2"
pyodbc = "^4.0.39"
mariadb = "^1.1.7"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
